--- a/Ceep-main/index.html
+++ b/Ceep-main/index.html
@@ -62,12 +62,69 @@
             <span> Feito Por Francisco</span>
         </div>
 
+<br>
+        <div class="box">
+            <a href="https://editor.p5js.org/angel.schuenck/full/jRI8u7YyU">
+                <img src="img/forza.jpg" border="5" width="300" height="300" hspace="30" vspace="70" alt="freeway>"> 
+            </a>
+            <span> Feito Por Vitor e Angel</span>
+        </div>
+
+
+        <div class="box">
+            <a href="https://editor.p5js.org/gabrielle.maria.santos/full/5fxAaTgzt">
+                <img src="img/Strangrt.jpg" border="5" width="300" height="300" hspace="30" vspace="70" alt="freeway>"> 
+            </a>
+            <span> Feito Por Gabrielle</span>
+        </div>
+
+
+        <div class="box">
+            <a href="http://editor.p5js.org/pamela.cristina.sanches/full/tSqvFIuw0">
+                <img src="img/Pacman.jpeg" border="5" width="300" height="300" hspace="30" vspace="70" alt="freeway>"> 
+            </a>
+            <span> Feito Por Pamela</span>
+        </div>
+
+<br>
+
+    <div class="box">
+        <a href="https://editor.p5js.org/azevedo.moraes/sketches/ubbuchAZ-">
+            <img src="img/pixell.jpeg" border="5" width="300" height="300" hspace="30" vspace="70" alt="freeway>"> 
+        </a>
+        <span> Feito Por Maria Eduarda</span>
+    </div>
+
+
+    <div class="box">
+        <a href="https://editor.p5js.org/luiz.barbosa.vidal/full/KnB13bmgI">
+            <img src="img/navee.webp" border="5" width="300" height="300" hspace="30" vspace="70" alt="freeway>"> 
+        </a>
+        <span> Feito Por Luiz Henrique</span>
+    </div>
+
+
+    <div class="box">
+        <a href="https://editor.p5js.org/kayky.yamamoto/full/2vLBh5TFb">
+            <img src="img/carropixiel.png" border="5" width="300" height="300" hspace="30" vspace="70" alt="freeway>"> 
+        </a>
+        <span> Feito Por Kayky E Guilherme</span>
+    </div>
+ <BR>
+
+    <div class="box">
+        <a href="https://editor.p5js.org/rafael.braz.silva/full/0vv5F5UD1">
+            <img src="img/bolinhaa.jpeg" border="5" width="300" height="300" hspace="30" vspace="70" alt="freeway>"> 
+        </a>
+        <span> Feito Por Rafael</span>
+    </div>
+    
+
+
+
 
 
     </div>
-
-   
-
 
 
    </p>
